hello-kubernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: application-ingress
  namespace: application-namespace
spec:
  rules:
    - host: argocd-app.as.opensource.devoteam.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes-test
                port:
                  number: 80
  tls:
    - hosts:
        - argocd-app.as.opensource.devoteam.be
      secretName: argocd-app-tls-secret
